Bug fix
Netrun cover now covers the nett, wow

--- a/style.css
+++ b/style.css
@@ -258,7 +258,6 @@ body{
             grid-row: 2;
             height: 500px;
             width: 500px;
-            display: grid;
         }
 
         #minigame-button{
@@ -283,10 +282,10 @@ body{
         #netrun-cover{
             grid-row: 2;
             color: aliceblue;
-            top: 260px;
+            top: 0px;
             left: 0px;
             position: absolute;
-            z-index: 1;
+            z-index: 2;
             height: 500px;
             width: 500px;
             background-color: #141517;
